--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,6 +95,17 @@ nav ul li a:hover {
 .main-index .about .miembros .p_miemb {
   text-align: center;
 }
+.main-index .about .boton_subir {
+  position: fixed;
+  bottom: 2em;
+  right: 2em;
+  background-color: black;
+  padding: 0.7em 1em;
+  font-size: 2em;
+  border-radius: 50%;
+  color: black;
+  transition: color #ee5a96, background-color 0.5s;
+}
 .main-index .formulario .h2_form {
   color: #000000;
   font-family: "staatliches", Verdana;
@@ -203,37 +214,56 @@ footer .f_p {
 .main-galeria .grid-container {
   display: grid;
   justify-content: center;
-  margin-left: 2%;
-  grid-template-columns: 32% 32% 32%;
-  grid-template-rows: 23% 23% 23% 23%;
+  margin-left: 5%;
+  margin-bottom: 15%;
+  grid-template-columns: 25% 25% 25%;
+  grid-template-rows: 18% 18% 18% 18%;
   gap: 0px 0px;
-  grid-template-areas: "foto1 foto1 foto3" "foto2 foto2 foto3" "foto4 foto4 foto4" "foto5 foto6 foto7";
+  grid-template-areas: "foto1 foto1 foto3" "foto2 foto2 foto3" "foto4 foto4 foto4" "foto5 foto6 foto7" "foto8 foto9 foto9" "foto8 foto10 foto10";
 }
 .main-galeria .grid-container .foto1 {
   grid-area: foto1;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
 }
 .main-galeria .grid-container .foto3 {
   grid-area: foto3;
+  margin-left: 25%;
+  margin-top: 15%;
 }
 .main-galeria .grid-container .foto2 {
   grid-area: foto2;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
 }
 .main-galeria .grid-container .foto4 {
   grid-area: foto4;
 }
 .main-galeria .grid-container .foto5 {
   grid-area: foto5;
-  margin-top: 5%;
+  margin-top: 25%;
 }
 .main-galeria .grid-container .foto6 {
   grid-area: foto6;
-  margin-top: 5%;
+  margin-top: 13%;
+  margin-right: 2%;
+  margin-left: 2%;
 }
 .main-galeria .grid-container .foto7 {
   grid-area: foto7;
+  margin-top: 2%;
+}
+.main-galeria .grid-container .foto8 {
+  grid-area: foto8;
+  margin-top: 45%;
+  margin-right: 5%;
+}
+.main-galeria .grid-container .foto9 {
+  grid-area: foto9;
   margin-top: 5%;
+}
+.main-galeria .grid-container .foto10 {
+  grid-area: foto10;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 /* ALBUMS */
@@ -255,8 +285,13 @@ footer .f_p {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
   padding-top: 5%;
+}
+.main_albums .reproductor .noodle_reproductor {
+  margin: none;
+}
+.main_albums .reproductor .spoty_reproductor {
+  margin-bottom: 10%;
 }
 
 /* MERCH */
@@ -278,14 +313,8 @@ footer .f_p {
   align-items: center;
   justify-content: center;
 }
-.main_merch .categorias {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 .main_merch .categorias .categorias_titulo {
   margin-top: 2%;
-  width: 100%;
   background-color: #ee5a96;
 }
 .main_merch .categorias .categorias_titulo .h1_merch {
@@ -297,11 +326,9 @@ footer .f_p {
 .main_merch .categorias .tarjetas_merch {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: center;
-  padding-top: 10%;
-  padding-bottom: 10%;
-  width: 70%;
+  padding: 5%;
+  margin: 5%;
 }
 .main_merch .categorias .tarjetas_merch .tarjeta_clothing {
   padding: 1%;
@@ -331,7 +358,7 @@ footer .f_p {
   width: 40%;
   height: 13%;
   padding: 1%;
-  padding-top: 3%;
+  padding-top: 4%;
   text-align: center;
   background-color: black;
   border-radius: 8px;
@@ -349,6 +376,11 @@ footer .f_p {
   box-shadow: 5px 5px 7px #ee5a96;
 }
 
+/* FANS */
+.main-fans .foro .h1-foro {
+  font-size: 3rem;
+}
+
 /*media queries */
 @media (max-width: 760px) {
   .bnt {
@@ -362,6 +394,8 @@ footer .f_p {
 
   .banr {
     margin-top: 13%;
+    margin-bottom: 1%;
+    padding-bottom: none;
   }
 
   .tour-main .h1_tour {
@@ -379,5 +413,9 @@ footer .f_p {
 @media (min-width: 760px) {
   .navbar {
     display: none;
+  }
+
+  .navbar-nav {
+    text-align: center;
   }
 }
