--- a/SASS/estilos.scss
+++ b/SASS/estilos.scss
@@ -518,17 +518,70 @@ footer {
 
 .main-fans {
     .foro {
-        .h1-foro {
-            font-size: 3rem;
+            width: 60%;
+            border-radius: 10px;
+            box-shadow: 5px 5px 5px #b8b8b8;
+            border-style: dashed;
+            border-color: $negro;
+            margin: auto;
+            text-align:center;
+
+            .h1-foro {
+                font-size: 4rem;
+                font-family: $fuente_segundaria;
+                padding-right: 7%;
+                
+            }
+            
+            .p-foro {
+                font-size: 1rem;
+                font-family: $fuente_principal;
+                padding: 2%;
+                text-align: center;
+            }
+            .comunidad {
+                font-size: 2rem;
+                font-family: $fuente_segundaria;
+            }
+            .boton-foro {
+                width: 40%;
+                height: 7%;
+                padding: 1%;
+                padding-top: 1%;
+                text-align: center;
+                background-color: $negro;
+                border-radius: 8px;
+                color: $blanco;
+
+            }
+            
+            .boton-foro a {
+                text-decoration: none;
+                color: $blanco; 
+
+            }
+
+            .boton-foro a:hover {
+                color:$rosa;
+                text-decoration: none;    
+            }
+
+            .boton-foro :hover
+            {
+                box-shadow: 5px 5px 7px $rosa;
+            }
+
+
         }
     }
-}
 
 
 
 
 
 /*media queries */
+
+
 @media (max-width: 760px) {
     .bnt{
         width: 100%;
@@ -582,6 +635,5 @@ footer {
     .navbar-nav {
         text-align: center;
     }
-
-
 }
+
