--- a/css/estilos.css
+++ b/css/estilos.css
@@ -377,8 +377,50 @@ footer .f_p {
 }
 
 /* FANS */
+.main-fans .foro {
+  width: 60%;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px #b8b8b8;
+  border-style: dashed;
+  border-color: black;
+  margin: auto;
+  text-align: center;
+}
 .main-fans .foro .h1-foro {
-  font-size: 3rem;
+  font-size: 4rem;
+  font-family: "staatliches", Verdana;
+  padding-right: 7%;
+}
+.main-fans .foro .p-foro {
+  font-size: 1rem;
+  font-family: "Roboto Mono", sans-serif;
+  padding: 2%;
+  text-align: center;
+}
+.main-fans .foro .comunidad {
+  font-size: 2rem;
+  font-family: "staatliches", Verdana;
+}
+.main-fans .foro .boton-foro {
+  width: 40%;
+  height: 7%;
+  padding: 1%;
+  padding-top: 1%;
+  text-align: center;
+  background-color: black;
+  border-radius: 8px;
+  color: #fff;
+}
+.main-fans .foro .boton-foro a {
+  text-decoration: none;
+  color: #fff;
+}
+.main-fans .foro .boton-foro a:hover {
+  color: #ee5a96;
+  text-decoration: none;
+}
+.main-fans .foro .boton-foro :hover {
+  box-shadow: 5px 5px 7px #ee5a96;
 }
 
 /*media queries */
