--- a/SASS/estilos.scss
+++ b/SASS/estilos.scss
@@ -140,18 +140,22 @@ nav ul li {
             color: $blanco;
             margin-top: 9%;
             width: 80%;
-            height: 50%;
-            box-shadow: 5px 5px 7px;
+            height: 40%;
         }
-    }
 
-    .iconos{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        margin-top: 4%;
+    }
+    .row_iconos {
+        width: 100%;
+        padding-left: 34%;
+        padding-right: 34%;
+        .iconos{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            margin-top: 4%;
+            width: 100%;
+        }
     }
     
 }
@@ -242,6 +246,18 @@ footer {
                 .tour_button:hover
                 {
                     box-shadow: 5px 5px 7px $blanco;
+                }
+
+                .tour_button_1 {
+                    margin-top: 40%;
+                    
+
+                }
+                
+                .tour_button_2 {
+                    margin-top: 40%;
+                    
+
                 }
                 
             }
@@ -357,6 +373,21 @@ footer {
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
+
+        .albums_boton_info {
+            color: white;
+            padding: 2%;
+            background-color: $rosa;
+            height: 20%;
+            border-radius: 10px;
+        }
+
+        .albums_boton_info:hover {
+            color: $negro;
+            text-decoration: none;
+            box-shadow: 5px 5px 7px $negro;
+
+        }
 
         .album2 {
             padding: 1%;
@@ -546,24 +577,13 @@ footer {
                 background-color: $negro;
                 border-radius: 8px;
                 color: $blanco;
-
             }
-            
-            .boton-foro a {
+
+            .boton-foro:hover{
                 text-decoration: none;
-                color: $blanco; 
-
-            }
-
-            .boton-foro a:hover {
-                color:$rosa;
-                text-decoration: none;    
-            }
-
-            .boton-foro :hover
-            {
                 box-shadow: 5px 5px 7px $rosa;
             }
+            
 
 
         }
@@ -575,6 +595,15 @@ footer {
             text-align: center;
             font-size: 0.8rem;
             
+        }
+        .texto-fan-art a {
+            color:$rosa;
+            text-decoration: none;
+            font-size: 1rem;
+        }
+
+        .texto-fan-art a:hover {
+            color: $negro;
         }
 
         .fan-art-imgs {
@@ -595,10 +624,7 @@ footer {
 
 
 @media (max-width: 769px) {
-    .bnt{
-        width: 100%;
-        height: 100%;
-    }
+
 
     .art-menu {
         display: none;
@@ -617,20 +643,21 @@ footer {
     .tour-main {
         .h1_tour {
             font-size: 3rem;
-            padding-right: 15%;
+            margin-left: 37%;
         }
 
     .tour_box {
         .tour_right{
-            margin-bottom: 20%;
-            margin-top: 40%;
+            margin-top:30%;
+            margin-bottom: 60%;
+            
             
             .tour_button {
-                padding-right:60%;
-                padding-left: 60%;
-            }
-            
+                width: 120%;
+
+            }   
         }
+
 
         .tour_left {
             
@@ -655,8 +682,10 @@ footer {
         }
 
         .miembros{
+
             .cabecitas {
                 margin-left: 15%;
+
             }
         }
         .formulario {
@@ -664,20 +693,34 @@ footer {
 
             .text-area{
                 padding-right: 10%;
+            }
 
+            .btn {
+                padding-bottom: 6%;
             }
         }
+
+        .row_iconos {
+            
+            padding-left: 5%;
+            padding-right: 5%;
+            
+        }
+
     }
 
 /* GALERIA */
 .main-galeria {
+    
+
     .grid-container {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        
+        width: 100%;
+        margin-left: 6%;
         padding:3%;
-        width: 90%;
+        
 
         .foto2 {
             margin-bottom: 5%;
@@ -712,16 +755,27 @@ footer {
 
 
 /* ALBUMS */
-.reproductor {
 
-    .noodle_reproductor {
-        padding-left: 15%;
+.main_albums {
+
+    .albums_boton {
+        margin-bottom: 5%;
     }
 
-    .spoty_reproductor {
-        margin-left: 8%;
-    }
 
+    .reproductor {
+
+        .noodle_reproductor {
+            padding-left: 15%;
+            width: 80%;
+        }
+
+        .spoty_reproductor {
+            margin: auto;
+            
+        }
+
+    }
 }
 
 
@@ -732,6 +786,16 @@ footer {
     .main-fans {
 
         background-image: none;
+
+        .foro {
+            margin-top: 10%;
+        }
+        
+        .texto-fan-art {
+            width: 90%;
+            margin:auto;
+            
+        }
 }
 
 
@@ -748,8 +812,6 @@ footer {
     .navbar-nav {
         text-align: center;
     }
-
-
 
 }
 
