--- a/SASS/estilos.scss
+++ b/SASS/estilos.scss
@@ -72,12 +72,16 @@ nav ul li {
 }
 
 
-.conteiner{
-    padding: 4%;
+.container{
+    padding: 3%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
+}
+
+.row {
+    margin: 0%;
 }
 
 
@@ -106,7 +110,6 @@ nav ul li {
     background-position: center;
 
     .about {
-        padding-right: 5%;
         padding-top: 5%;
         margin-top: 20px;
         
@@ -115,10 +118,16 @@ nav ul li {
             color: $blanco;
         }
 
+        .img-bio {
+            margin-top: 6%;
+        }
+
     .miembros {
         .p_miemb {
             text-align: center;
-        }        
+        }
+        
+        
     }
 
     }
@@ -146,13 +155,11 @@ nav ul li {
     }
     .row_iconos {
         width: 100%;
-        padding-left: 34%;
-        padding-right: 34%;
+        padding-left: 27%;
+        padding-right: 27%;
         .iconos{
             display: flex;
             flex-direction: row;
-            align-items: center;
-            justify-content: center;
             margin-top: 4%;
             width: 100%;
         }
@@ -234,8 +241,7 @@ footer {
                 }
 
                 .tour_button a{
-                    color: $negro;
-                    text-decoration: none;    
+                    color: $negro;   
                 }
     
                 .tour_button a:hover {
@@ -282,11 +288,14 @@ footer {
 /* GALERIA */
 
 .main-galeria {
+    background-image: url("../img/fondo.albums.svg");
+    background-repeat: no-repeat;
+    background-position: cover;
+
     .grid-container {
         display: grid;
         justify-content: center;
-        margin-left: 5%;
-        margin-bottom: 15%;
+        margin-bottom: 10%;
         grid-template-columns: 25% 25% 25%;
         grid-template-rows: 18% 18% 18% 18%;
         gap: 0px 0px;
@@ -305,40 +314,41 @@ footer {
         }
         
         .foto3 { 
-        grid-area: foto3;
-        margin-left: 25%;
-        margin-top: 15%; 
+            grid-area: foto3;
+            margin-left: 25%;
+            margin-top: 5%;
+            margin-bottom: 2%; 
         
         }
         
         .foto2 {
-        grid-area: foto2;
-        margin-bottom: 2%;  
+            grid-area: foto2;
+            margin-bottom: 2%;  
         
         }
         
         .foto4 { 
-        grid-area: foto4; 
+            grid-area: foto4; 
         
         }
         
         .foto5 {
-        grid-area: foto5;
-        margin-top: 25%;
+            grid-area: foto5;
+            margin-top: 25%;
         
         }
         
         .foto6 {
-        grid-area: foto6;
-        margin-top: 13%;
-        margin-right: 2%; 
-        margin-left: 2%; 
+            grid-area: foto6;
+            margin-top: 13%;
+            margin-right: 2%; 
+            margin-left: 2%; 
         
         }
         
         .foto7 {
-        grid-area: foto7;
-        margin-top: 2%; 
+            grid-area: foto7;
+            margin-top: 2%; 
         
         }
         
@@ -349,14 +359,14 @@ footer {
         }
 
         .foto9 {
-                grid-area: foto9;
-                margin-top: 5%;
+            grid-area: foto9;
+            margin-top: 5%;
         }
 
         .foto10 {
-                grid-area: foto10;
-                margin-top: 5%;
-                margin-bottom: 5%;            
+            grid-area: foto10;
+            margin-top: 5%;
+            margin-bottom: 5%;            
         }
     
     }
@@ -405,13 +415,15 @@ footer {
         padding-top: 5%;
 
         .noodle_reproductor {
-            margin-left: 10%;
+            margin-left: 18%;
             padding-bottom: 0%;
         }
 
         .spoty_reproductor {
-            margin-bottom: 10%;
+            margin-bottom: 5%;
             padding-top: 0%;
+            margin-right: 8%;
+
         }
 
     }
@@ -646,27 +658,27 @@ footer {
             margin-left: 37%;
         }
 
-    .tour_box {
-        .tour_right{
-            margin-top:30%;
-            margin-bottom: 60%;
-            
-            
-            .tour_button {
-                width: 120%;
+        .tour_box {
+            .tour_right{
+                margin-top:30%;
+                margin-bottom: 60%;
+                
+                
+                .tour_button {
+                    width: 120%;
 
-            }   
-        }
-
-
-        .tour_left {
-            
-            .tour_lugar{
-                font-size: 1rem;
+                }   
             }
-        }
 
-    }
+
+            .tour_left {
+                
+                .tour_lugar{
+                    font-size: 1rem;
+                }
+            }
+
+        }
 
     }
 
@@ -677,6 +689,7 @@ footer {
  /* HOME */
 
     .main-index {
+
         .about {
             padding-top: 15%;
         }
@@ -711,43 +724,54 @@ footer {
 
 /* GALERIA */
 .main-galeria {
-    
 
+    background-image: url(../img/fondo.albums.2.svg);
+    
+    .div.grid-container{
+        margin:0%;
+    }
     .grid-container {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        width: 100%;
-        margin-left: 6%;
+        margin-left: 4%;
+        margin-right:0%;
         padding:3%;
         
 
         .foto2 {
             margin-bottom: 5%;
+            
         }
 
         .foto3 {
-            margin-left: 5%;
+            
             margin-top: 5%;
             margin-bottom: 5%;
+            
         }
 
 
         .foto5 {
             margin-top: 5%;
+            
         }
 
         .foto6 {
             margin-top: 5%;
+            
         }
 
         .foto7 {
             margin-top: 5%;
+            
         }
 
         .foto8 {
             margin-top: 5%;
-            margin-left: 8%;
+            margin-right: 7%;
+            
+            
         }
     }
 }
@@ -757,7 +781,7 @@ footer {
 /* ALBUMS */
 
 .main_albums {
-
+    margin: 1%;
     .albums_boton {
         margin-bottom: 5%;
     }
@@ -766,13 +790,14 @@ footer {
     .reproductor {
 
         .noodle_reproductor {
-            padding-left: 15%;
             width: 80%;
-        }
-
-        .spoty_reproductor {
-            margin: auto;
+            padding:0%;
+            margin: 0%;
             
+        }
+        .spoty_reproductor {
+            margin-right: 0%;
+
         }
 
     }
