--- a/SASS/estilos.scss
+++ b/SASS/estilos.scss
@@ -444,6 +444,7 @@ footer {
     .slider {
         width: 100%;
         height: 100%;
+
     }
 
     .top_merch {
@@ -814,6 +815,10 @@ footer {
 
         .foro {
             margin-top: 10%;
+
+            .boton-foro {
+                padding: 3%;
+            }
         }
         
         .texto-fan-art {
